Updated project files

--- a/freelance_marketplace/templates/gig_detail.html
+++ b/freelance_marketplace/templates/gig_detail.html
@@ -49,7 +49,7 @@
         <h4 class="fw-semibold mb-3 text-white">Customer Reviews</h4>
         {% if reviews %}
           {% for review in reviews %}
-          <div class="border rounded p-3 mb-3" style="background-color: #2c2c2c;">
+          <div class="border rounded p-3 mb-3" style="background-color: #9c9bb4;">
             <div class="d-flex justify-content-between">
               <h6 class="fw-bold text-light">{{ review.customer.username }}</h6>
               <span class="text-warning">⭐ {{ review.rating }}/5</span>
